package com.lyutov.labs_fx.features.lab1;

public interface Movement {
    void moveToPoint(Point p);
}
