package com.lyutov.labs_fx.features.lab3;

public class FileReadException extends Exception {
    public FileReadException(String message, Throwable cause) {
        super(message, cause);
    }
}
